# alpine-vector-minds

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-workspace.yaml
.github/workflows/: ci.yml  deploy.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/src/: main.py
apps/api/src/api/v1/: __init__.py  auth.py  users.py
apps/api/src/core/: database.py  security.py
apps/api/src/models/: user.py
apps/api/tests/: test_health.py
apps/web/: tailwind.config.ts
backend/: Dockerfile  README.md  pyproject.toml
backend/agents/: __init__.py  base.py  deep_research.py  gap_detection.py  kb_generation.py  qa_scoring.py  triage.py
backend/api/: cli.py  health.py  main.py
backend/api/core/: config.py  constants.py  security.py
backend/api/v1/: __init__.py  auth.py  chat.py  copilot.py  dashboard.py  evaluation.py  knowledge.py  learning.py  qa.py  users.py
backend/api/v1/schemas/: __init__.py  copilot.py  dashboard.py  knowledge.py  learning.py  qa.py
backend/scripts/: create_fulltext_indexes.py  create_vector_indexes.py  evaluate.py  generate_embeddings.py  import_data.py  migrate_qa_columns.py  migrate_ticket_embeddings.py  rescore_qa.py
backend/vector_db/: __init__.py  database.py  embeddings.py  search.py
backend/vector_db/models/: __init__.py  conversation.py  copilot_feedback.py  evaluation_run.py  kb_lineage.py  knowledge_article.py  learning_event.py  placeholder.py  question.py  script.py  ticket.py  user.py
docker/: Dockerfile.api  Dockerfile.web
docs/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PHASE4.md  analysis-hackathon-evaluation.md
docs/CHANGELOG/: 2025-02-02-23-00-initial-monorepo-setup.md  2025-02-02-23-15-add-changelog-documentation.md  2026-02-03-18-06-restructure-monorepo.md  2026-02-03-18-31-consolidate-python-backend.md  2026-02-03-18-44-move-database-to-vector_db.md  2026-02-03-18-51-remove-alembic.md  2026-02-03-18-54-add-makefile.md  2026-02-06-19-41-ec2-deploy-auth-landing.md  2026-02-06-20-54-fix-ci-workflow.md  2026-02-07-14-00-add-default-dev-user.md  2026-02-07-15-00-add-chat-endpoint.md  2026-02-07-16-00-backend-api-phase2-endpoints.md  2026-02-07-18-00-consolidate-env-files.md  2026-02-07-18-00-fix-dockerignore-nested-dirs.md  2026-02-07-18-00-open-ssh-to-all.md  2026-02-07-18-00-phase3-integration.md  2026-02-07-18-30-remove-terraform-dependency-from-scripts.md  2026-02-07-19-00-frontend-polish.md  2026-02-07-20-00-claude-md-quality-rules.md  2026-02-07-21-50-supportmind-implementation-plan.md  2026-02-07-22-00-ai-agents-and-vector-search.md  2026-02-07-22-30-phase1-database-data-pipeline.md  2026-02-07-23-22-add-production-seeding.md  2026-02-07-23-30-phase2c-frontend-implementation.md  2026-02-08-10-00-script-display.md  (+19 more)
frontend/: .dockerignore  package.json  pnpm-lock.yaml
nginx/: nginx.conf
scripts/: backup-db.sh  deploy.sh  init-ssl.sh  seed-production.sh  setup-production.sh
services/search/: pyproject.toml
(+45 files in other folders)
